# test/resources/swagger.yml
@@ -73,6 +73,11 @@ paths:
           type: string
           format: StrList
           in: query
+        - name: pathParam
+          required: false
+          type: string
+          format: PathParam
+          in: query
         - name: numberListParam
           required: false
           type: string
@@ -113,6 +118,9 @@ paths:
                 format: StrList
                 items:
                   - type: string
+              pathParam:
+                type: string
+                format: PathParam
               numberListParam:
                 type: array
                 format: NumberList
